version/0.12/_sources/api/solver/_autosummary/settings/mixture_child.rst.txt
:orphan:

.. _mixture_child:

mixture_child
=============

.. currentmodule:: ansys.fluent.core.solver.settings_231.mixture_child

.. autoclass:: mixture_child
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==============================================================   =======================================

Child                                                                                            Summary

==============================================================   =======================================
:ref:`density <density_2>`                                                              'density' child.

:ref:`viscosity <viscosity_1>`                                                        'viscosity' child.

:ref:`specific_heat <specific_heat_2>`                                            'specific_heat' child.

:ref:`thermal_conductivity <thermal_conductivity_2>`                       'thermal_conductivity' child.

:ref:`premix_laminar_speed <premix_laminar_speed>`                         'premix_laminar_speed' child.

:ref:`premix_laminar_thickness <premix_laminar_thickness>`             'premix_laminar_thickness' child.

:ref:`premix_unburnt_temp <premix_unburnt_temp_1>`                          'premix_unburnt_temp' child.

:ref:`premix_unburnt_cp <premix_unburnt_cp>`                                  'premix_unburnt_cp' child.

:ref:`premix_unburnt_density <premix_unburnt_density_1>`                 'premix_unburnt_density' child.

:ref:`premix_heat_trans_coeff <premix_heat_trans_coeff_1>`              'premix_heat_trans_coeff' child.

:ref:`premix_critical_strain <premix_critical_strain>`                   'premix_critical_strain' child.

:ref:`therm_exp_coeff <therm_exp_coeff>`                                        'therm_exp_coeff' child.

:ref:`absorption_coefficient <absorption_coefficient_1>`                 'absorption_coefficient' child.

:ref:`scattering_coefficient <scattering_coefficient>`                   'scattering_coefficient' child.

:ref:`scattering_phase_function <scattering_phase_function>`          'scattering_phase_function' child.

:ref:`refractive_index <refractive_index>`                                     'refractive_index' child.

:ref:`mass_diffusivity <mass_diffusivity_1>`                                   'mass_diffusivity' child.

:ref:`species <species>`                                                                'species' child.

:ref:`reactions <reactions>`                                                          'reactions' child.

:ref:`reaction_mechs <reaction_mechs>`                                           'reaction_mechs' child.

:ref:`uds_diffusivity <uds_diffusivity>`                                        'uds_diffusivity' child.

:ref:`thermal_diffusivity <thermal_diffusivity>`                            'thermal_diffusivity' child.

:ref:`tmelt <tmelt>`                                                                      'tmelt' child.

:ref:`melting_heat <melting_heat>`                                                 'melting_heat' child.

:ref:`eutectic_temp <eutectic_temp>`                                              'eutectic_temp' child.

:ref:`speed_of_sound <speed_of_sound>`                                           'speed_of_sound' child.

:ref:`critical_temperature <critical_temperature>`                         'critical_temperature' child.

:ref:`critical_pressure <critical_pressure>`                                  'critical_pressure' child.

:ref:`critical_volume <critical_volume>`                                        'critical_volume' child.

:ref:`acentric_factor <acentric_factor>`                                        'acentric_factor' child.

:ref:`electric_conductivity <electric_conductivity>`                      'electric_conductivity' child.

:ref:`dual_electric_conductivity <dual_electric_conductivity>`       'dual_electric_conductivity' child.

:ref:`lithium_diffusivity <lithium_diffusivity>`                            'lithium_diffusivity' child.

:ref:`collision_cross_section <collision_cross_section>`                'collision_cross_section' child.

:ref:`mixture_species <mixture_species>`                                        'mixture_species' child.

==============================================================   =======================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`mixture <mixture>`       'mixture' child.

========================   ====================

